# colorcraft

./: Dockerfile  LICENSE  README.md  docker-entrypoint.sh  justfile  main.py  pyproject.toml
colorcraft/: __init__.py  __main__.py  coloring_page.py  image_processor.py  main.py  openai_client.py  web_app.py
colorcraft/static/: style.css
colorcraft/templates/: index.html
docs/superpowers/plans/: 2026-05-01-image-to-coloring-page.md
docs/superpowers/specs/: 2026-05-01-image-to-coloring-page-design.md
scripts/: deploy
