[project]
name = "colorcraft"
version = "0.1.0"
description = "A CLI tool for generating coloring pages using AI"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.14"
dependencies = [
    "openai>=2.33.0",
    "Pillow>=12.2.0",
    "reportlab>=4.5.0",
    "click>=8.3.3",
    "flask>=3.1.3",
    "gunicorn>=25.3.0"
]
